--- a/01_document/04_real data/04_real data.tex
+++ b/01_document/04_real data/04_real data.tex
@@ -7,7 +7,7 @@ Durante los años 2013 al 2015, instituciones gubernamentales del Perú, el INEI y
 
 Dicha encuesta formó parte de las investigaciones estadísticas realizadas por el INEI, cuyo diseño muestral fue probabilístico y polietápico. La primera unidad de muestreo constituyó el establecimiento de salud por cada uno de los conjuntos anteriormente expuestos, y la segunda unidad de muestreo constitió en los usuarios elegibles y profesionales de la salud. La encuesta tuvo alcance nacional, por los 24 departamentos del Perú. El nivel de inferencia indicado por el INEI es nacional y dirigida a cada una de las unidades de análisis.
 
-Para própositos de la aplicación, se utilizó la encuesta ejecutada a profesionales de la salud. En esta, los datos obtenidos están relacionados con la formación académica, actividad laboral, satisfacción en el trabajo, estrés laboral y conocimiendo de la SUNASA \cite{inei:ensusalud}. 
+Para própositos de la aplicación, se utilizó la encuesta ejecutada a profesionales de la salud. En esta, los datos obtenidos están relacionados con la formación académica, actividad laboral, satisfacción en el trabajo, estrés laboral y conocimiento de la SUNASA \cite{inei:ensusalud}. 
 
 De dicha encuesta, se utilizaron las siguientes variables:
 
@@ -75,7 +75,7 @@ En la figura \ref{fig:sueldos} se puede observar que existe una mayor proporción
 
 Tomando como variable respuesta la banda salarial, se ajustó el modelo de regresión cuantílica para datos intervalares a los datos. Dado que existen variables categóricas en la base de datos, las categorías de referencia para el presente estudio es un médico hombre, con labor docente remunerada,tiene estudios de especialización, que trabaja en un establecimiento del MINSA, y adicionalmente realizaría labor asistencial en otra institución. En ese sentido, el intervalo puede ser interpretado como una estimación del sueldo de dicha categoría de referencia a lo largo de los cuantiles de la variable respuesta. Para el ajuste del modelo, se consideró una función de enlace logarítmica para los parámetros $\boldsymbol{\beta}$ y $\alpha$. 
 
-La figura \ref{med:efectos} presenta un resumen de los resultados de la aplicación del modelo. Cada uno de los gráficos presentados tiene como eje horizontal el nivel del cuantil $\tau$, y como eje vertical el efecto marginal de la covariable. En dicho gráfico, se tiene tanto la estimación por el modelo de regresión cuantílica para datos con censura intervalar y un modelo de regresión censurada. En azul, se tienen los efectos estimados de cada covariable por el modelo propuesto en el capítulo 3, así como sus intervalos de confianza al 95\%. En negro y gris, se tiene la estimación mediante un modelo de regresión de Weibull que estima la media.
+La figura \ref{med:efectos} presenta un resumen de los resultados de la aplicación del modelo y el apéndice muestra las estimaciones por cada cuantil. Cada uno de los gráficos presentados tiene como eje horizontal el nivel del cuantil $\tau$, y como eje vertical el efecto marginal de la covariable. En dicho gráfico, se tiene tanto la estimación por el modelo de regresión cuantílica para datos con censura intervalar y un modelo de regresión censurada. En azul, se tienen los efectos estimados de cada covariable por el modelo propuesto en el capítulo 3, así como sus intervalos de confianza al 95\%. En negro y gris, se tiene la estimación mediante un modelo de regresión de Weibull que estima la media.
 
 En relación al efecto medio, se observa que un profesional de salud mujer tendría un decremento salarial en relación a la categoría de referencia. No obstante, el análisis se enriquece cuando tomamos en consideración el modelo de regresión cuantílica para datos intervalares, pues se observa que para los cuantiles inferiores existe un considerable efecto negativo para dicha variable. Esta disparidad entre el efecto medio y los efectos por cada cuantil se pueden apreciar adicionalmente en la cantidad de horas trabajadas (C2P27), pues se observa que el efecto positivo de las horas trabajadas es mayor en la medida que se analiza los cuantiles superiores. Por otro lado, el efecto negativo de no contar con una especialización (C2P13) es cada vez menor en la medida que se evalúan los cuantiles superiores.
 
