--- a/01_document/ape-1.tex
+++ b/01_document/ape-1.tex
@@ -557,3 +557,221 @@ ggplot(val_med) +
   facet_wrap(vars(col_df), scales = "free")
 
 \end{lstlisting}
+
+\section{Estimación de los coeficientes - ENSUSALUD 2015}
+
+% Please add the following required packages to your document preamble:
+% \usepackage{graphicx}
+\begin{table}[!ht]
+\centering
+\resizebox{\textwidth}{!}{%
+\begin{tabular}{l|lllll}
+ & \textbf{Cuantil $t$} & \textbf{Estimado} & \textbf{Error Std.} & \textbf{valor-t} & \textbf{p-valor} \\ \hline
+(Intercept)             & 0.1 & 8.340  & 0.050 & 168.082 & 0.000 \\
+INSTITUCIONESSALUD      & 0.1 & 0.148  & 0.011 & 13.151  & 0.000 \\
+INSTITUCIONFF.AA. Y PNP & 0.1 & -0.025 & 0.038 & -0.661  & 0.508 \\
+INSTITUCIONCLÍNICAS     & 0.1 & -0.177 & 0.023 & -7.708  & 0.000 \\
+C2P4Mujer               & 0.1 & -0.769 & 0.031 & -24.721 & 0.000 \\
+C2P13No                 & 0.1 & -0.157 & 0.012 & -13.507 & 0.000 \\
+C2P21                   & 0.1 & 0.007  & 0.001 & 12.826  & 0.000 \\
+C2P24No                 & 0.1 & -0.314 & 0.020 & -15.712 & 0.000 \\
+C2P26No                 & 0.1 & -0.188 & 0.018 & -10.586 & 0.000 \\
+C2P27                   & 0.1 & 0.003  & 0.001 & 5.948   & 0.000 \\
+\textbackslash{}alpha   & 0.1 & 3.213  & 0.067 & 48.181  & 0.000 \\ \hline
+\end{tabular}%
+}
+\caption{Estimación de los efectos para el cuantil $t = 0.1$.}
+\label{tab:t01}
+\end{table}
+
+% Please add the following required packages to your document preamble:
+% \usepackage{graphicx}
+\begin{table}[]
+\centering
+\resizebox{\textwidth}{!}{%
+\begin{tabular}{l|lllll}
+ & \textbf{Cuantil $t$} & \textbf{Estimado} & \textbf{Error Std.} & \textbf{valor-t} & \textbf{p-valor} \\ \hline
+(Intercept)             & 0.2 & 8.340  & 0.045 & 185.538 & 0.000 \\
+INSTITUCIONESSALUD      & 0.2 & 0.163  & 0.011 & 14.781  & 0.000 \\
+INSTITUCIONFF.AA. Y PNP & 0.2 & 0.029  & 0.040 & 0.717   & 0.473 \\
+INSTITUCIONCLÍNICAS     & 0.2 & -0.187 & 0.023 & -8.284  & 0.000 \\
+C2P4Mujer               & 0.2 & -0.499 & 0.016 & -32.152 & 0.000 \\
+C2P13No                 & 0.2 & -0.103 & 0.011 & -9.282  & 0.000 \\
+C2P21                   & 0.2 & 0.010  & 0.001 & 16.838  & 0.000 \\
+C2P24No                 & 0.2 & -0.444 & 0.023 & -19.685 & 0.000 \\
+C2P26No                 & 0.2 & -0.195 & 0.017 & -11.212 & 0.000 \\
+C2P27                   & 0.2 & 0.005  & 0.001 & 8.775   & 0.000 \\
+\textbackslash{}alpha   & 0.2 & 3.271  & 0.048 & 67.755  & 0.000 \\ \cline{1-5}
+\end{tabular}%
+}
+\caption{Estimación de los coeficientes para el cuantil $t = 0.2$.}
+\label{tab:t02}
+\end{table}
+
+% Please add the following required packages to your document preamble:
+% \usepackage{graphicx}
+\begin{table}[]
+\centering
+\resizebox{\textwidth}{!}{%
+\begin{tabular}{l|lllll}
+ & \textbf{Cuantil $t$} & \textbf{Estimado} & \textbf{Error Std.} & \textbf{valor-t} & \textbf{p-valor} \\ \hline
+(Intercept)             & 0.3 & 8.340  & 0.041 & 204.890 & 0.000 \\
+INSTITUCIONESSALUD      & 0.3 & 0.170  & 0.011 & 16.030  & 0.000 \\
+INSTITUCIONFF.AA. Y PNP & 0.3 & 0.003  & 0.037 & 0.079   & 0.937 \\
+INSTITUCIONCLÍNICAS     & 0.3 & -0.145 & 0.022 & -6.669  & 0.000 \\
+C2P4Mujer               & 0.3 & -0.432 & 0.013 & -32.109 & 0.000 \\
+C2P13No                 & 0.3 & -0.112 & 0.011 & -10.522 & 0.000 \\
+C2P21                   & 0.3 & 0.009  & 0.001 & 15.709  & 0.000 \\
+C2P24No                 & 0.3 & -0.318 & 0.018 & -17.476 & 0.000 \\
+C2P26No                 & 0.3 & -0.181 & 0.016 & -11.121 & 0.000 \\
+C2P27                   & 0.3 & 0.005  & 0.001 & 9.276   & 0.000 \\
+\textbackslash{}alpha   & 0.3 & 3.420  & 0.047 & 72.947  & 0.000 \\ \cline{1-5}
+\end{tabular}%
+}
+\caption{Estimación de los coeficientes para el cuantil $t = 0.3$.}
+\label{tab:t03}
+\end{table}
+
+% Please add the following required packages to your document preamble:
+% \usepackage{graphicx}
+\begin{table}[]
+\centering
+\resizebox{\textwidth}{!}{%
+\begin{tabular}{l|lllll}
+ & \textbf{Cuantil $t$} & \textbf{Estimado} & \textbf{Error Std.} & \textbf{valor-t} & \textbf{p-valor} \\ \hline
+(Intercept)             & 0.4 & 8.335  & 0.039 & 213.730 & 0.000 \\
+INSTITUCIONESSALUD      & 0.4 & 0.190  & 0.011 & 18.022  & 0.000 \\
+INSTITUCIONFF.AA. Y PNP & 0.4 & 0.000  & 0.037 & 0.012   & 0.991 \\
+INSTITUCIONCLÍNICAS     & 0.4 & -0.137 & 0.021 & -6.476  & 0.000 \\
+C2P4Mujer               & 0.4 & -0.379 & 0.012 & -30.881 & 0.000 \\
+C2P13No                 & 0.4 & -0.077 & 0.011 & -7.364  & 0.000 \\
+C2P21                   & 0.4 & 0.009  & 0.001 & 17.174  & 0.000 \\
+C2P24No                 & 0.4 & -0.310 & 0.017 & -17.869 & 0.000 \\
+C2P26No                 & 0.4 & -0.178 & 0.016 & -11.338 & 0.000 \\
+C2P27                   & 0.4 & 0.005  & 0.001 & 10.049  & 0.000 \\
+\textbackslash{}alpha   & 0.4 & 3.418  & 0.047 & 73.225  & 0.000 \\ \hline
+\end{tabular}%
+}
+\caption{Estimación de los coeficientes para el cuantil $t = 0.4$.}
+\label{tab:t04}
+\end{table}
+
+% Please add the following required packages to your document preamble:
+% \usepackage{graphicx}
+\begin{table}[]
+\centering
+\resizebox{\textwidth}{!}{%
+\begin{tabular}{l|lllll}
+ & \textbf{Cuantil $t$} & \textbf{Estimado} & \textbf{Error Std.} & \textbf{valor-t} & \textbf{p-valor} \\ \hline
+(Intercept)             & 0.5 & 8.340  & 0.040 & 208.883 & 0.000 \\
+INSTITUCIONESSALUD      & 0.5 & 0.201  & 0.011 & 18.900  & 0.000 \\
+INSTITUCIONFF.AA. Y PNP & 0.5 & 0.015  & 0.037 & 0.395   & 0.693 \\
+INSTITUCIONCLÍNICAS     & 0.5 & -0.133 & 0.021 & -6.225  & 0.000 \\
+C2P4Mujer               & 0.5 & -0.377 & 0.012 & -30.502 & 0.000 \\
+C2P13No                 & 0.5 & -0.083 & 0.011 & -7.884  & 0.000 \\
+C2P21                   & 0.5 & 0.009  & 0.001 & 16.511  & 0.000 \\
+C2P24No                 & 0.5 & -0.301 & 0.018 & -17.028 & 0.000 \\
+C2P26No                 & 0.5 & -0.173 & 0.016 & -10.852 & 0.000 \\
+C2P27                   & 0.5 & 0.007  & 0.001 & 12.809  & 0.000 \\
+\textbackslash{}alpha   & 0.5 & 3.399  & 0.046 & 73.212  & 0.000 \\ \hline
+\end{tabular}%
+}
+\caption{Estimación de los coeficientes para el cuantil $t = 0.5$.}
+\label{tab:t05}
+\end{table}
+
+% Please add the following required packages to your document preamble:
+% \usepackage{graphicx}
+\begin{table}[]
+\centering
+\resizebox{\textwidth}{!}{%
+\begin{tabular}{l|lllll}
+ & \textbf{Cuantil $t$} & \textbf{Estimado} & \textbf{Error Std.} & \textbf{valor-t} & \textbf{p-valor} \\ \hline
+(Intercept)             & 0.6 & 8.340  & 0.040 & 211.331 & 0.000 \\
+INSTITUCIONESSALUD      & 0.6 & 0.206  & 0.011 & 19.505  & 0.000 \\
+INSTITUCIONFF.AA. Y PNP & 0.6 & 0.043  & 0.038 & 1.120   & 0.263 \\
+INSTITUCIONCLÍNICAS     & 0.6 & -0.110 & 0.022 & -5.087  & 0.000 \\
+C2P4Mujer               & 0.6 & -0.339 & 0.012 & -28.793 & 0.000 \\
+C2P13No                 & 0.6 & -0.063 & 0.011 & -6.000  & 0.000 \\
+C2P21                   & 0.6 & 0.009  & 0.001 & 16.770  & 0.000 \\
+C2P24No                 & 0.6 & -0.297 & 0.018 & -17.014 & 0.000 \\
+C2P26No                 & 0.6 & -0.171 & 0.016 & -10.904 & 0.000 \\
+C2P27                   & 0.6 & 0.008  & 0.001 & 14.247  & 0.000 \\
+\textbackslash{}alpha   & 0.6 & 3.421  & 0.047 & 73.494  & 0.000 \\ \hline
+\end{tabular}%
+}
+\caption{Estimación de los coeficientes para el cuantil $t = 0.6$.}
+\label{tab:t06}
+\end{table}
+
+% Please add the following required packages to your document preamble:
+% \usepackage{graphicx}
+\begin{table}[]
+\centering
+\resizebox{\textwidth}{!}{%
+\begin{tabular}{l|lllll}
+ & \textbf{Cuantil $t$} & \textbf{Estimado} & \textbf{Error Std.} & \textbf{valor-t} & \textbf{p-valor} \\ \hline
+(Intercept)             & 0.7 & 8.340  & 0.041 & 203.767 & 0.000 \\
+INSTITUCIONESSALUD      & 0.7 & 0.218  & 0.011 & 19.819  & 0.000 \\
+INSTITUCIONFF.AA. Y PNP & 0.7 & 0.065  & 0.041 & 1.592   & 0.111 \\
+INSTITUCIONCLÍNICAS     & 0.7 & -0.077 & 0.024 & -3.261  & 0.001 \\
+C2P4Mujer               & 0.7 & -0.333 & 0.012 & -27.463 & 0.000 \\
+C2P13No                 & 0.7 & -0.049 & 0.011 & -4.440  & 0.000 \\
+C2P21                   & 0.7 & 0.010  & 0.001 & 17.598  & 0.000 \\
+C2P24No                 & 0.7 & -0.303 & 0.018 & -16.681 & 0.000 \\
+C2P26No                 & 0.7 & -0.147 & 0.016 & -9.271  & 0.000 \\
+C2P27                   & 0.7 & 0.008  & 0.001 & 14.765  & 0.000 \\
+\textbackslash{}alpha   & 0.7 & 3.271  & 0.045 & 72.982  & 0.000 \\ \hline
+\end{tabular}%
+}
+\caption{Estimación de los coeficientes para el cuantil $t = 0.7$.}
+\label{tab:t07}
+\end{table}
+
+% Please add the following required packages to your document preamble:
+% \usepackage{graphicx}
+\begin{table}[]
+\centering
+\resizebox{\textwidth}{!}{%
+\begin{tabular}{l|lllll}
+ & \textbf{Cuantil $t$} & \textbf{Estimado} & \textbf{Error Std.} & \textbf{valor-t} & \textbf{p-valor} \\ \hline
+(Intercept)             & 0.8 & 8.340  & 0.039 & 211.625 & 0.000 \\
+INSTITUCIONESSALUD      & 0.8 & 0.248  & 0.011 & 22.799  & 0.000 \\
+INSTITUCIONFF.AA. Y PNP & 0.8 & 0.032  & 0.037 & 0.870   & 0.384 \\
+INSTITUCIONCLÍNICAS     & 0.8 & -0.095 & 0.022 & -4.426  & 0.000 \\
+C2P4Mujer               & 0.8 & -0.321 & 0.012 & -27.711 & 0.000 \\
+C2P13No                 & 0.8 & -0.043 & 0.011 & -4.006  & 0.000 \\
+C2P21                   & 0.8 & 0.010  & 0.001 & 17.883  & 0.000 \\
+C2P24No                 & 0.8 & -0.277 & 0.017 & -16.122 & 0.000 \\
+C2P26No                 & 0.8 & -0.160 & 0.016 & -10.327 & 0.000 \\
+C2P27                   & 0.8 & 0.010  & 0.001 & 17.205  & 0.000 \\
+\textbackslash{}alpha   & 0.8 & 3.388  & 0.047 & 72.508  & 0.000 \\ \hline
+\end{tabular}%
+}
+\caption{Estimación de los coeficientes para el cuantil $t = 0.8$.}
+\label{tab:t08}
+\end{table}
+
+% Please add the following required packages to your document preamble:
+% \usepackage{graphicx}
+\begin{table}[]
+\centering
+\resizebox{\textwidth}{!}{%
+\begin{tabular}{l|lllll}
+ & \textbf{Cuantil $t$} & \textbf{Estimado} & \textbf{Error Std.} & \textbf{valor-t} & \textbf{p-valor} \\ \hline
+(Intercept)             & 0.9 & 8.898  & 0.046 & 192.163 & 0.000 \\
+INSTITUCIONESSALUD      & 0.9 & 0.167  & 0.011 & 14.781  & 0.000 \\
+INSTITUCIONFF.AA. Y PNP & 0.9 & -0.019 & 0.039 & -0.480  & 0.631 \\
+INSTITUCIONCLÍNICAS     & 0.9 & -0.179 & 0.023 & -7.908  & 0.000 \\
+C2P4Mujer               & 0.9 & -0.420 & 0.014 & -29.886 & 0.000 \\
+C2P13No                 & 0.9 & -0.103 & 0.011 & -9.122  & 0.000 \\
+C2P21                   & 0.9 & 0.009  & 0.001 & 15.493  & 0.000 \\
+C2P24No                 & 0.9 & -0.332 & 0.020 & -16.599 & 0.000 \\
+C2P26No                 & 0.9 & -0.258 & 0.019 & -13.315 & 0.000 \\
+C2P27                   & 0.9 & 0.007  & 0.001 & 11.407  & 0.000 \\
+\textbackslash{}alpha   & 0.9 & 3.289  & 0.050 & 66.477  & 0.000 \\ \hline
+\end{tabular}%
+}
+\caption{Estimación de los coeficientes para el cuantil $t = 0.9$.}
+\label{tab:t09}
+\end{table}
